--- a/templates/base.html
+++ b/templates/base.html
@@ -1,51 +1,60 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ABOBA SHOP</title>
-  <!-- CSS only -->
-  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
-  <link rel="stylesheet" href="static/css/style.css">
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ABOBA SHOP</title>
+    <!-- CSS only -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+          integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+    <link rel="stylesheet" href="static/css/style.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
 </head>
 <body>
-	<header>
-	<nav class="navbar navbar-expand-lg navbar-light bg-secondary">
-  <div class="container-xxl">
-    <a class="navbar-brand" href="/">
-      <img src="static/img/brand/logo.svg" alt="" width="30" height="24" class="d-inline-block align-text-top brand">
-      ABOBA SHOP
-    </a>
-    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
-    </button>
-    <div class="collapse navbar-collapse" id="navbarNav">
-      <ul class="navbar-nav">
-        <li class="nav-item">
-          <a class="nav-link active" aria-current="page" href="/">ГЛАВНАЯ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/list">РЕКОМЕНДАЦИИ</a>
-        </li>
-        <li class="nav-item">
-          <a class="nav-link" href="/cart">КОРЗИНА</a>
-        </li>
-      </ul>
-      <div class="position-absolute start-50">
-  </div>
-    </div>
-  </div>
-  <div class="reg_but">
-      {% if current_user.is_authenticated %}
+<header>
+    <nav class="navbar navbar-expand-lg navbar-light bg-secondary">
+        <div class="container-xxl">
+            <a class="navbar-brand" href="/">
+                <img src="static/img/brand/logo.svg" alt="" width="30" height="24"
+                     class="d-inline-block align-text-top brand">
+                ABOBA SHOP
+            </a>
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="/">ГЛАВНАЯ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/list">РЕКОМЕНДАЦИИ</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="/cart">КОРЗИНА</a>
+                    </li>
+                </ul>
+                <div class="position-absolute start-50">
+                    <form action="" class="d-flex" method="post">
+                        {% if form %}
+                            {{form.search(class="form-control me-2", type="search", placeholder="Search game")}}
+                            {{form.submit(class="btn btn-danger", type="submit")}}
+                        {% endif %}
+                    </form>
+                </div>
+            </div>
+        </div>
+        <div class="reg_but">
+            {% if current_user.is_authenticated %}
             <a class="btn btn-primary" href="/logout">{{ current_user.nick }}</a>
-      {% else %}
-        <a class="btn btn-primary" href="/register">Зарегистрироваться</a>
-        <a class="btn btn-primary" href="/login">Войти</a>
-      {% endif %}
-</div>
-</nav>
-	</header>
+            {% else %}
+            <a class="btn btn-primary" href="/register">Зарегистрироваться</a>
+            <a class="btn btn-primary" href="/login">Войти</a>
+            {% endif %}
+        </div>
+    </nav>
+</header>
 
 <!-- Begin page content -->
 <main role="main">
@@ -53,38 +62,38 @@
 </main>
 
 <footer class="container-fluid footer">
-	<br class="br">
-		<div class="container-lg">
-			<div class="row padding text-center">
-				<div class="col-12">
-						<h2 align="center">Наши контакты</h2>
-						<div class="col-12 social padding">
-							<ul>
-							<li>
-									<a href="#">
-                                    <i class="fa fa-twitter"></i>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="#">
-                                    <i class="fa fa-instagram"></i>
-                                </a>
-                            </li>
-                           	<li>
-                           		<a href="#">
-                                    <i class="fa fa-vk"></i>
-                                </a>
-                           	</li>
-                           	<li>
-                           		<a href="#"><i class="fa fa-facebook"></i></a>
-                           	</li>
+    <br class="br">
+    <div class="container-lg">
+        <div class="row padding text-center">
+            <div class="col-12">
+                <h2 align="center">Наши контакты</h2>
+                <div class="col-12 social padding">
+                    <ul>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-twitter"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-instagram"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#">
+                                <i class="fa fa-vk"></i>
+                            </a>
+                        </li>
+                        <li>
+                            <a href="#"><i class="fa fa-facebook"></i></a>
+                        </li>
 
-							</ul>
+                    </ul>
 
-						</div>
-				</div>
-			</div>
-		</div>
-	</footer>
+                </div>
+            </div>
+        </div>
+    </div>
+</footer>
 </body>
 </html>
