--- a/templates/index.html
+++ b/templates/index.html
@@ -69,7 +69,7 @@
 	 					<img class="" src="{{ j['img'] }}">
 	 				</a>
 	 					<a href="/{{j['id']}}" class="game-item-name">{{ j['name'] }}</a>
-	 					<div class="price"><b>{{ j['price'] }} р.</b></div>
+	 					<div class="price"><b>{{ j['price'] }}₽</b></div>
 	 					<a href="/cart_add/{{j['id']}}" class="btn btn-primary">В корзину</a>
 	 			</div>
 				{% endfor %}
