--- a/templates/product.html
+++ b/templates/product.html
@@ -23,7 +23,7 @@
 
 <p class="price-detail-wrap"> 
   <span class="price h3 text-warning"> 
-    <span class="currency">RU ₽</span><span class="num">{{ game['price'] }}</span>
+    <span class="currency">RU </span><span class="num">{{ game['price'] }}₽</span>
   </span> 
 </p> <!-- price-detail-wrap .// -->
 <dl class="item-property">
