--- a/templates/comments.html
+++ b/templates/comments.html
@@ -1,38 +1,28 @@
-{% extends 'base.html' %}
+{% extends "base.html" %}
+
 {% block content %}
-<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta3/dist/css/bootstrap.min.css" rel="stylesheet"
+      integrity="sha384-eOJMYsd53ii+scO/bJGFsiCZc+5NDVN2yr8+0RDqr0Ql0h+rP48ckxlpbzKgwra6" crossorigin="anonymous">
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
-<link rel="stylesheet" type="text/css" href="static/css/comments.css">
+<link rel="stylesheet" type="text/css" href="{{url_for('static', filename='/css/comments.css')}}">
 <section>
     <div class="container">
         <div class="row">
-            <div class="col-sm-5 col-md-6 col-12 pb-4">
-                <h1>Комментарии</h1>
-                <div class="comment mt-4 text-justify float-left"> <img src="" alt="" class="rounded-circle avatar" width="40" height="40">
-                    <h4>Пользователь 1</h4> <span>- 24 April, 2021</span> <br>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero sequi velit molestias doloremque molestiae dicta?</p>
+            <center>
+                <h1>Оставить комментарий</h1>
+                <div class="col-lg-4 col-md-5 col-sm-4 offset-md-1 offset-sm-1 col-12 mt-4">
+                    <center>
+                        <form id="algin-form" method="post">
+                            <div class="form-group">
+                                <h4>Оставить комментарий</h4> <label for="message">Текст</label> {{form.body(id="",
+                                cols="30",
+                                rows="5", class="form-control", style="background-color: black;")}}
+                            </div>
+                            {{ form.submit(type="submit", class="btn btn-primary")}}
+                        </form>
+                    </center>
                 </div>
-                <div class="text-justify darker mt-4 float-right"> <img src="" alt="" class="rounded-circle avatar" width="40" height="40">
-                    <h4>Пользователь 2</h4> <span>- 24 April, 2021</span> <br>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero sequi velit molestias doloremque molestiae dicta?</p>
-                </div>
-                <div class="comment mt-4 text-justify"> <img src="" alt="" class="rounded-circle avatar" width="40" height="40">
-                    <h4>Пользователь 3</h4> <span>- 24 April, 2021</span> <br>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero sequi velit molestias doloremque molestiae dicta?</p>
-                </div>
-                <div class="darker mt-4 text-justify"> <img src="" alt="" class="rounded-circle avatar" width="40" height="40">
-                    <h4>Пользователь 4</h4> <span>- 24 April, 2021</span> <br>
-                    <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Accusamus numquam assumenda hic aliquam vero sequi velit molestias doloremque molestiae dicta?</p>
-                </div>
-            </div>
-            <div class="col-lg-4 col-md-5 col-sm-4 offset-md-1 offset-sm-1 col-12 mt-4">
-                <form id="algin-form">
-                    <div class="form-group">
-                        <h4>Оставить комментарий</h4> <label for="message">Текст</label> <textarea name="msg" id="" msg cols="30" rows="5" class="form-control" style="background-color: black;"></textarea>
-                    </div>
-                    <a href="/add_comment" class="btn btn-primary text-uppercase addcom">Добавить комментарий</a>
-                </form>
-            </div>
+            </center>
         </div>
     </div>
 </section>
